# AIMP-Subsonic-Plugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.ru.md  subsonic.local.example.json
.github/workflows/: build.yml
src/: AimpPlugin.cpp  AimpPlugin.h  AimpString.cpp  AimpString.h  ComBase.cpp  ComBase.h  Config.cpp  Config.h  CoverArtCache.cpp  CoverArtCache.h  Diagnostics.cpp  Diagnostics.h  DllMain.cpp  PlaybackTracker.cpp  PlaybackTracker.h  PlaylistBridge.cpp  PlaylistBridge.h  SimpleJson.cpp  SimpleJson.h  SubsonicAlbumArtProvider.cpp  SubsonicAlbumArtProvider.h  SubsonicClient.cpp  SubsonicClient.h  SubsonicFileInfoProvider.cpp  SubsonicFileInfoProvider.h  SubsonicLibraryNodes.cpp  SubsonicLibraryNodes.h  SubsonicMusicLibrary.cpp  SubsonicMusicLibrary.h  SubsonicOptionsFrame.cpp  SubsonicOptionsFrame.h  SubsonicRepository.cpp  SubsonicRepository.h  Url.cpp  Url.h  Version.h
tests/: SecurityTests.cpp  SimpleJsonNavidromeTests.cpp  SubsonicLibraryNodesTests.cpp
